--- a/src/main/resources/static/css/forum.css
+++ b/src/main/resources/static/css/forum.css
@@ -6,3 +6,19 @@
 .box {
     border: 1px solid darkgrey;
 }
+
+.publish-tag-tab {
+    display: none;
+    margin-top: 10px;
+    padding-top: 10px;
+}
+
+.publish-tag-tab .label-info{
+    white-space: normal;
+    margin: 5px 5px;
+    display: inline-block;
+}
+
+.label-info{
+    font-size: 12px;
+}
