--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -5,8 +5,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
+    <link rel="stylesheet" href="/css/forum.css"/>
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/Forum.js"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
@@ -20,7 +22,8 @@
                 <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
                     <label for="title">问题标题:</label>
-                    <input type="text" class="form-control" th:value="${title}" id="title" name = "title" placeholder="问题标题">
+                    <input type="text" class="form-control" th:value="${title}" id="title" name = "title"
+                           placeholder="问题标题" autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label for="description">问题补充（必填）:</label>
@@ -28,7 +31,27 @@
                 </div>
                 <div class="form-group">
                     <label for="tag">添加标签</label>
-                    <input type="text" class="form-control" th:value="${tag}" id="tag" name = "tag" placeholder="添加标签，以逗号隔开">
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name = "tag"
+                           autocomplete="off" placeholder="添加标签，以逗号隔开" onclick="openSelectTag()">
+                    <div id="select-tag" class="publish-tag-tab">
+                        <ul class="nav nav-tabs" role="tablist">
+                            <li role="presentation" th:each="selectCategory : ${tags}" th:class="${selectCategoryStat.first ? 'active' : ''}">
+                                <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab"
+                                   data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
+                            </li>
+                        </ul>
+                        <div class="tab-content">
+                            <div role="tabpanel" th:class="${selectCategoryStat.first ? 'active tab-pane' : 'tab-pane'}" th:id="${selectCategory.categoryName}"
+                                th:each="selectCategory : ${tags}">
+                                <span>
+                                    <span class="label label-info" th:each="selectTag : ${selectCategory.tags}">
+                                    <span class="glyphicon glyphicon-tags" onclick="selectTag(this)"
+                                          th:data-tag="${selectTag}" th:text="${' '+ selectTag}"></span>
+                                </span>
+                                </span>
+                            </div>
+                        </div>
+                    </div>
                 </div>
 
                 <span class="alert alert-danger" th:text="${error}" th:if="${error != null}"></span>
