--- a/src/main/resources/templates/navigation.html
+++ b/src/main/resources/templates/navigation.html
@@ -35,6 +35,12 @@
                     <li th:if="${session.user != null}">
                         <a href="/publish">提问</a>
                     </li>
+                    <li th:if="${session.user != null}">
+                        <a href="/publish">发表</a>
+                    </li>
+                    <li th:if="${session.user != null}">
+                        <a href="/publish">分享</a>
+                    </li>
                     <li><a href="/profile/replies">通知<span class="badge" th:text="${session.unReadCount}"></span></a></li>
                     <li class="dropdown" th:if="${session.user != null}">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
