--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="css/bootstrap-theme.min.css"/>
     <script src="js/jquery-3.4.1.min.js"></script>
     <script src="js/bootstrap.min.js" type="application/javascript"></script>
-
 </head>
 <script>
     window.onload = function () {
@@ -23,7 +22,7 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-list" aria-hidden="true" style="height: 38px; width: 38px"></span>发现</h2>
+            <h2><span class="glyphicon glyphicon-list" aria-hidden="true" style="height: 38px; width: 38px"></span>讨论区</h2>
             <hr>
             <div class="media" th:each="question: ${pagination.data}">
                 <div class="media-left">
@@ -37,7 +36,6 @@
                     <h4 class="media-heading">
                         <a th:href="@{'/question/' + ${question.id}}" th:text="${question.title}"></a>
                     </h4>
-                    <span th:text="${question.description}"></span><br>
                     <span style="font-size: 12px;font-weight: normal;color: #999">
                         <span th:text="${question.commentCount}"></span>个回复 ·
                         <span th:text="${question.viewCount}"></span>次浏览 ·
@@ -76,7 +74,11 @@
             </nav>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>热门话题</h3>
+            <h3>其他板块</h3>
+            <ul>
+                <h3><li><a href="/campus">校园周边</a></li></h3>
+                <h3><li><a href="/share">资源共享</a></li></h3>
+            </ul>
         </div>
     </div>
 </div>
