--- a/src/main/resources/templates/solution.html
+++ b/src/main/resources/templates/solution.html
@@ -23,14 +23,14 @@
             <form action="/publish" method="post" >
                 <input type="hidden" name="id" th:value="${id}">
                 <div class="form-group">
-                    <label for="title">问题标题:</label>
+                    <label for="title">题目标题:</label>
                     <input type="text" class="form-control" th:value="${title}" id="title" name = "title"
                            placeholder="问题标题" autocomplete="off">
                 </div>
                 <div class="form-group" id="question-editor">
-                    <label for="description">问题补充（必填）:</label>
+                    <label for="description">题目解析（必填）:</label>
                     <textarea style="display:none;" class="form-control" th:text="${description}" name="description" id="description"
-                               cols="30" rows="10"></textarea>
+                              cols="30" rows="10"></textarea>
                 </div>
                 <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
                 <script type="text/javascript">
@@ -48,7 +48,7 @@
                 <div class="form-group">
                     <label for="tag">添加标签</label>
                     <input type="text" class="form-control" th:value="${tag}" id="tag" name = "tag"
-                           autocomplete="off" placeholder="添加标签，以逗号隔开" onclick="openSelectTag()">
+                           autocomplete="off" placeholder="添加标签" onclick="openSelectTag()">
                     <div id="select-tag" class="publish-tag-tab">
                         <ul class="nav nav-tabs" role="tablist">
                             <li role="presentation" th:each="selectCategory : ${tags}" th:class="${selectCategoryStat.first ? 'active' : ''}">
@@ -58,7 +58,7 @@
                         </ul>
                         <div class="tab-content">
                             <div role="tabpanel" th:class="${selectCategoryStat.first ? 'active tab-pane' : 'tab-pane'}" th:id="${selectCategory.categoryName}"
-                                th:each="selectCategory : ${tags}">
+                                 th:each="selectCategory : ${tags}">
                                 <span>
                                     <span class="label label-info" th:each="selectTag : ${selectCategory.tags}">
                                     <span class="glyphicon glyphicon-tags" onclick="selectTag(this)"
@@ -75,9 +75,9 @@
             </form>
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>问题发起指南</h3>
-            ·问题标题：请用精简的语言描述您发布的问题，不超过25个字<br>
-            ·问题补充：详细补充您的问题，并确保问题描述清晰直观，并提供相应的一些资料；<br>
+            <h3>题解发起指南</h3>
+            ·题目标题：请用精简的语言描述您发布的问题，不超过25个字<br>
+            ·题目解析：详细补充您的问题，并确保问题描述清晰直观，并提供相应的一些资料；<br>
             ·选择标签：选择一个或多个合适的标签<br>
         </div>
     </div>
