重构发表问题页面

--- a/src/main/resources/templates/campus.html
+++ b/src/main/resources/templates/campus.html
@@ -19,6 +19,7 @@
 </script>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
+<!--校园周边页面-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -27,11 +28,7 @@
 
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>其他板块</h3>
-            <ul>
-                <h3><li><a href="/campus">校园周边</a></li></h3>
-                <h3><li><a href="/share">资源共享</a></li></h3>
-            </ul>
+            <h3>热门话题</h3>
         </div>
     </div>
 </div>
