--- a/src/main/resources/templates/profile.html
+++ b/src/main/resources/templates/profile.html
@@ -14,7 +14,7 @@
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <h2><span th:text="${sectionName}"></span></h2>
-            <hr>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" th:if="${section == 'questions'}">
                 <div class="media" th:each="question: ${pagination.data}">
                     <div class="media-left">
