--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -17,6 +17,7 @@
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
+<!--讨论区问题详情页-->
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
