--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -10,6 +10,7 @@
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
+<!--课程推荐首页-->
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
@@ -18,11 +19,7 @@
 
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>其他板块</h3>
-            <ul>
-                <h3><li><a href="/campus">校园周边</a></li></h3>
-                <h3><li><a href="/share">资源共享</a></li></h3>
-            </ul>
+            <h3>热门话题</h3>
         </div>
     </div>
 </div>
