--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -17,18 +17,22 @@
 <div class="container-fluid">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
-            <hr>
+            <h2>
+                <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
+                <span th:text="${sessionName}"></span>
+            </h2>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
             <form action="/publish" method="post" >
                 <input type="hidden" name="id" th:value="${id}">
+                <input type="hidden" id="plate" name="plate" th:value="${session}">
                 <div class="form-group">
-                    <label for="title">问题标题:</label>
+                    <label for="title">标题:</label>
                     <input type="text" class="form-control" th:value="${title}" id="title" name = "title"
-                           placeholder="问题标题" autocomplete="off">
+                           placeholder="标题" autocomplete="off">
                 </div>
                 <div class="form-group" id="question-editor">
-                    <label for="description">问题补充（必填）:</label>
+                    <label for="description">内容:</label>
                     <textarea style="display:none;" class="form-control" th:text="${description}" name="description" id="description"
                                cols="30" rows="10"></textarea>
                 </div>
@@ -41,7 +45,7 @@
                             path: "/js/lib/",
                             delay: 0,
                             watch: false,
-                            placeholder: "请输入问题描述"
+                            placeholder: "请输入描述"
                         });
                     });
                 </script>
