--- a/src/main/resources/templates/record.html
+++ b/src/main/resources/templates/record.html
@@ -1,84 +1,110 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>发布-学习交流论坛</title>
+    <title>学习生活交流论坛</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
     <link rel="stylesheet" href="/css/forum.css"/>
-    <link rel="stylesheet" href="/css/editormd.min.css"/>
+    <link rel="stylesheet" href="/css/editormd.preview.min.css"/>
     <script src="/js/jquery-3.4.1.min.js"></script>
     <script src="/js/bootstrap.min.js" type="application/javascript"></script>
+    <script src="/js/moment.js" type="application/javascript"></script>
     <script src="/js/Forum.js" type="application/javascript"></script>
     <script src="/js/editormd.min.js" type="application/javascript"></script>
+    <script src="/js/lib/marked.min.js"></script>
+    <script src="/js/lib/prettify.min.js"></script>
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
-<div class="container-fluid">
+<!--校园周边分享详情页-->
+<div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
-            <h2><span class="glyphicon glyphicon-plus" aria-hidden="true"></span>发起</h2>
-            <hr>
+            <!--正文-->
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
 
-            <form action="/publish" method="post" >
-                <input type="hidden" name="id" th:value="${id}">
-                <div class="form-group">
-                    <label for="title">分享标题:</label>
-                    <input type="text" class="form-control" th:value="${title}" id="title" name = "title"
-                           placeholder="分享标题" autocomplete="off">
+                <hr>
+                <!--问题内容-->
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">
+                    <textarea style="display:none;">内容</textarea>
                 </div>
-                <div class="form-group" id="question-editor">
-                    <label for="description">分享内容（必填）:</label>
-                    <textarea style="display:none;" class="form-control" th:text="${description}" name="description" id="description"
-                              cols="30" rows="10"></textarea>
-                </div>
-                <script src="https://cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
                 <script type="text/javascript">
-                    $(function() {
-                        var editor = editormd("question-editor", {
-                            width: "100%",
-                            height: 350,
-                            path: "/js/lib/",
-                            delay: 0,
-                            watch: false,
-                            placeholder: "请输入问题描述"
-                        });
+                    $(function () {
+                        editormd.markdownToHTML("question-view",{});
                     });
                 </script>
-                <div class="form-group">
-                    <label for="tag">添加标签</label>
-                    <input type="text" class="form-control" th:value="${tag}" id="tag" name = "tag"
-                           autocomplete="off" placeholder="添加标签" onclick="openSelectTag()">
-                    <div id="select-tag" class="publish-tag-tab">
-                        <ul class="nav nav-tabs" role="tablist">
-                            <li role="presentation" th:each="selectCategory : ${tags}" th:class="${selectCategoryStat.first ? 'active' : ''}">
-                                <a th:href="${'#'+selectCategory.categoryName}" aria-controls="home" role="tab"
-                                   data-toggle="tab" th:text="${selectCategory.categoryName}"></a>
-                            </li>
-                        </ul>
-                        <div class="tab-content">
-                            <div role="tabpanel" th:class="${selectCategoryStat.first ? 'active tab-pane' : 'tab-pane'}" th:id="${selectCategory.categoryName}"
-                                 th:each="selectCategory : ${tags}">
-                                <span>
-                                    <span class="label label-info" th:each="selectTag : ${selectCategory.tags}">
-                                    <span class="glyphicon glyphicon-tags" onclick="selectTag(this)"
-                                          th:data-tag="${selectTag}" th:text="${' '+ selectTag}"></span>
-                                </span>
-                                </span>
-                            </div>
-                        </div>
-                    </div>
+                <!--标签-->
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    <span class="label label-info" style="margin-left: 10px; font-size: 15px">
+                        <span class="glyphicon glyphicon-tags"></span>
+                        <span class="label label-info">MOOC</span>
+                    </span>
                 </div>
 
-                <span class="alert alert-danger" th:text="${error}" th:if="${error != null}"></span>
-                <button type="submit" class="btn btn-success">发布</button>
-            </form>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                    编辑
+                </div>
+            </div>
+            <br>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>回复</h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+
+            </div>
+
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
+                <!--回复框-->
+                <h4>提交回复</h4>
+                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#"></a>
+                    </div>
+                    <div class="media-body">
+                        <h5 class="media-heading">
+                        </h5>
+                    </div>
+                </div>
+                <textarea class="form-control" rows="3" id="comment_content"></textarea>
+                <button type="button" class="btn btn-success pull-right" onclick="post()">回复</button>
+            </div>
         </div>
+
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
-            <h3>校园周边分享指南</h3>
-            ·分享标题：请用精简的语言描述您发布的问题，不超过25个字<br>
-            ·分享内容：详细补充您的问题，并确保问题描述清晰直观，并提供相应的一些资料；<br>
-            ·选择标签：选择一个或多个合适的标签<br>
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>发起人</h4>
+                <div class="media">
+                    <div class="media-left">
+                        <a href="#">
+                            <img class="media-object img-circle" th:src="${question.user.avatarUrl}"
+                                 style="height: 38px; width: 38px">
+                        </a>
+                    </div>
+                    <div class="media-body">
+                        <h5 class="media-heading">
+                            <span th:text="${question.user.name}"></span>
+                        </h5>
+                    </div>
+                </div>
+            </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-1">
+                <h3>推荐内容</h3>
+                <img src="/images/sea.jpg" style="width: 100%; height: 200px;">
+            </div>
+            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
+                <h4>相关问题</h4>
+                <ul style="list-style: none; font-size:13px; padding-left: 0; line-height: 20px">
+                    <li th:each="related : ${relateQuestion}">
+                        <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
 </div>
