--- a/src/main/resources/templates/solution.html
+++ b/src/main/resources/templates/solution.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <title>学习生活交流论坛</title>
+    <title th:text="${solution.title}"></title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <link rel="stylesheet" href="/css/bootstrap.min.css"/>
     <link rel="stylesheet" href="/css/bootstrap-theme.min.css"/>
@@ -17,76 +17,60 @@
 </head>
 <body>
 <div th:insert="~{navigation :: nav}"></div>
-<!--题解详情页-->
+<!--讨论区问题详情页-->
 <div class="container-fluid main">
     <div class="row">
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12">
             <!--正文-->
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
+                <h4><span th:text="${solution.title}"></span></h4>
+                <span class="text-desc" style="font-size: 12px;font-weight: normal;color: #999">
+                作者：<span th:text="${solution.user.name}"></span>|
+                发布时间：<span th:text="${#dates.format(solution.createTime,'yyyy-MM-dd HH:mm')}"></span>|
+                阅读数：<span th:text="${solution.viewCount}"></span>
+                </span>
                 <hr>
                 <!--问题内容-->
-                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="question-view">
-                    <textarea style="display:none;">内容</textarea>
+                <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="code-view">
+                    <textarea style="display:none;" th:text="${solution.description}"></textarea>
                 </div>
                 <script type="text/javascript">
                     $(function () {
-                        editormd.markdownToHTML("question-view",{});
+                        editormd.markdownToHTML("code-view",{});
                     });
                 </script>
                 <!--标签-->
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    <span class="label label-info" style="margin-left: 10px; font-size: 15px">
+                    <span class="label label-info" th:each="tag : ${solution.tag.split(',|，')}"
+                          style="margin-left: 10px; font-size: 15px">
                         <span class="glyphicon glyphicon-tags"></span>
-                        <span class="label label-info">MOOC</span>
+                        <span class="label label-info" th:text="${tag}"></span>
                     </span>
                 </div>
 
                 <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                    编辑
+                    <a th:href="@{'/publish/'+${solution.id}}" style="color:#999;"
+                       th:if="${session.user != null && session.user.id == solution.creator}">
+                        <span class="glyphicon glyphicon-pencil" aria-hidden="true">编辑</span>
+                    </a>
                 </div>
-            </div>
-            <br>
-            <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <h4>回复</h4>
-                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-
-            </div>
-
-            <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12" id="comment_section">
-                <!--回复框-->
-                <h4>提交回复</h4>
-                <hr class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
-                <div class="media">
-                    <div class="media-left">
-                        <a href="#"></a>
-                    </div>
-                    <div class="media-body">
-                        <h5 class="media-heading">
-                        </h5>
-                    </div>
-                </div>
-                <textarea class="form-control" rows="3" id="comment_content"></textarea>
-                <button type="button" class="btn btn-success pull-right" onclick="post()">回复</button>
             </div>
         </div>
-
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12">
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>发起人</h4>
                 <div class="media">
                     <div class="media-left">
                         <a href="#">
-                            <img class="media-object img-circle" th:src="${question.user.avatarUrl}"
+                            <img class="media-object img-circle" th:src="${solution.user.avatarUrl}"
                                  style="height: 38px; width: 38px">
                         </a>
                     </div>
                     <div class="media-body">
                         <h5 class="media-heading">
-                            <span th:text="${question.user.name}"></span>
+                            <span th:text="${solution.user.name}"></span>
                         </h5>
                     </div>
                 </div>
@@ -100,7 +84,7 @@
             <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
                 <h4>相关问题</h4>
                 <ul style="list-style: none; font-size:13px; padding-left: 0; line-height: 20px">
-                    <li th:each="related : ${relateQuestion}">
+                    <li th:each="related : ${relateCode}">
                         <a th:href="@{'/question/'+${related.id}}" th:text="${related.title}"></a>
                     </li>
                 </ul>
