--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -27,7 +27,11 @@
                 <span class="text-desc" style="font-size: 12px;font-weight: normal;color: #999">
                 作者：<span th:text="${question.user.name}"></span>|
                 发布时间：<span th:text="${#dates.format(question.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>|
-                阅读数：<span th:text="${question.viewCount}"></span>
+                阅读数：<span th:text="${question.viewCount}"></span>|
+                点赞数：<a><span class="glyphicon glyphicon-thumbs-up" th:data-id="${question.id}"
+                             onclick="incQuestionLike(this)"></span>
+                      </a>
+                <span th:text="${question.likeCount}"></span>
                 </span>
                 <hr>
                 <!--问题内容-->
@@ -77,9 +81,11 @@
                             </h5>
                             <div th:text="${comment.content}"></div>
                             <div class="menu">
-                                <span class="glyphicon glyphicon-thumbs-up"></span>
-                                <span class="glyphicon glyphicon-comment" th:data-id="${comment.id}"
-                                      onclick="collapseComment(this)"></span>
+                                <a><span class="glyphicon glyphicon-thumbs-up" th:data-id="${comment.id}"
+                                    onclick="incCommentLike(this)"></span></a>
+                                <span th:text="${comment.likeCount}"></span>
+                                <a><span class="glyphicon glyphicon-comment" th:data-id="${comment.id}"
+                                         onclick="collapseComment(this)"></span></a>
                                 <span th:text="${comment.commentCount}"></span>
                                 <span class="pull-right" th:text="${#dates.format(comment.gmtCreate, 'yyyy-MM-dd HH:mm')}"></span>
                             </div>
