--- a/src/main/resources/templates/sharing.html
+++ b/src/main/resources/templates/sharing.html
@@ -27,7 +27,11 @@
                 <span class="text-desc" style="font-size: 12px;font-weight: normal;color: #999">
                 作者：<span th:text="${share.user.name}"></span>|
                 发布时间：<span th:text="${#dates.format(share.gmtCreate,'yyyy-MM-dd HH:mm')}"></span>|
-                阅读数：<span th:text="${share.viewCount}"></span>
+                阅读数：<span th:text="${share.viewCount}"></span>|
+                点赞数：<a><span class="glyphicon glyphicon-thumbs-up" th:data-id="${share.id}"
+                             onclick="incShareLike(this)"></span>
+                      </a>
+                <span th:text="${share.likeCount}"></span>
                 </span>
                 <hr>
                 <!--问题内容-->
