--- a/src/main/resources/templates/solution.html
+++ b/src/main/resources/templates/solution.html
@@ -27,7 +27,11 @@
                 <span class="text-desc" style="font-size: 12px;font-weight: normal;color: #999">
                 作者：<span th:text="${solution.user.name}"></span>|
                 发布时间：<span th:text="${#dates.format(solution.createTime,'yyyy-MM-dd HH:mm')}"></span>|
-                阅读数：<span th:text="${solution.viewCount}"></span>
+                阅读数：<span th:text="${solution.viewCount}"></span>|
+                点赞数：<a><span class="glyphicon glyphicon-thumbs-up" th:data-id="${solution.id}"
+                             onclick="incCodeLike(this)"></span>
+                      </a>
+                <span th:text="${solution.likeCount}"></span>
                 </span>
                 <hr>
                 <!--问题内容-->
